# lzw_compression

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: lzw_decompressor.c  lzw_decompressor.h  lzw_dict.c  lzw_dict.h  main.c
